Fix padding inside Project on mobile view

--- a/portfolio/src/components/HomePage/HeroSection/HeroImage/HeroImage.module.css
+++ b/portfolio/src/components/HomePage/HeroSection/HeroImage/HeroImage.module.css
@@ -47,7 +47,6 @@
 @media (width < 640px) {
   .container > svg,
   .shadow > svg {
-    width: 100vw;
-    height: 100vh;
+    height: calc(100vh - 6rem);
   }
 }
